add color for class `osta-hl-sh-quoted-exec`

--- a/osta.css
+++ b/osta.css
@@ -107,6 +107,7 @@ a:hover {
 
 
 .osta-hl-clojure-keyword { color: #457f8b}            /* clojure-keyword-face */
+.osta-hl-sh-quoted-exec { color: #62bd9c}             /* sh-quoted-exec */
 
 ::-webkit-scrollbar {
   width: 0.6em;
