add the css class `one-hl-tms-prompt-and-cmd`

--- a/docs/assets/one.css
+++ b/docs/assets/one.css
@@ -109,6 +109,16 @@ a:hover {
 .one-hl-clojure-keyword { color: #457f8b}            /* clojure-keyword-face */
 .one-hl-sh-quoted-exec { color: #62bd9c}             /* sh-quoted-exec */
 
+.one-hl-tms-prompt-and-cmd {
+  background: #d3b2a1;
+  color: #313b52;
+  font-weight: bold;
+	display: inline-block;
+  border-radius: 0.2em;
+  margin: 0.4em 0em;
+  padding: 0.2em 0.2em;
+}
+
 ::-webkit-scrollbar {
   width: 0.6em;
   height: 0.6em;
