--- a/docs/assets/one.css
+++ b/docs/assets/one.css
@@ -64,7 +64,7 @@ dl, table, pre, details {
   margin-top: 0;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@500&family=Noto+Sans:wght@400;700&family=Passion+One:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@500&family=Noto+Sans:wght@400;700&display=swap');
 
 body {
   background: #151515;
