--- a/docs/assets/one.css
+++ b/docs/assets/one.css
@@ -336,3 +336,50 @@ a:visited {
 .one-hl-tms-ps1-git {color: #ff8700;}        /* tms-ps1-git-face */
 
 /* END - Specific to my configuration (Tony Aldon) */
+
+
+.container-doc {
+  margin: 3.5rem auto;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1140px;
+  width: 100%;
+  padding: 1em 16px;
+}
+
+#sidebar {
+  border-right: 1px solid #363636;
+  top: 4.5rem;
+  position: sticky;
+  width: 250px;
+  max-height: 100vh;
+  overflow-y: auto;
+}
+
+#sidebar a {
+  display: block;
+  color: #dedede;
+}
+
+#sidebar a:hover {
+  text-decoration: none;
+}
+
+#sidebar ul {
+  list-style: none;
+  padding:0;
+}
+
+#sidebar li {
+  padding: 0.2em 0.6em;
+}
+
+#sidebar li:hover {
+  background: #31424a;
+}
+
+article {
+  padding: 0 1.5em;
+  max-width: 640px;
+}
