--- a/docs/assets/one.css
+++ b/docs/assets/one.css
@@ -89,7 +89,7 @@ h2, h3, h4, h5, h6 {
 }
 
 h2, h3 {
-  border-bottom: 1px solid #363636;
+  border-bottom: 1px solid #1d272b;
 }
 
 h2 {font-size: 2em;}
@@ -222,7 +222,7 @@ a:visited {
   position: fixed;
   top: 0;
   left: 0;
-  border-bottom: 1px solid #363636;
+  border-bottom: 1px solid #1d272b;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -232,14 +232,19 @@ a:visited {
   display: flex;
   justify-content: center;
   margin-bottom: 32px;
+  color: #d1d1d1;
 }
 
 #toc > div {
   padding: 1em;
-  border: 1px solid #363636;
+}
+
+#toc a {
+  color: #d1d1d1;
 }
 
 #toc > div > div:first-child {
+  text-decoration: underline 1px;
   text-align: center;
   font-size: 1.2em;
   margin-bottom: 16px;
@@ -260,8 +265,8 @@ a:visited {
 }
 
 #nav {
-  border-top: 1px solid #363636;
-  margin-top: 2em;
+  border-top: 1px solid #c5c5c5;
+  margin-top: 3em;
   padding: 2em 0;
   display: flex;
   justify-content: center;
@@ -297,7 +302,7 @@ a:visited {
   line-height: 1.2em;
   font-size: 1.2em;
   color: #dedede;
-  border-bottom: 1px solid #363636;
+  border-bottom: 1px solid #31424a;
   padding: 1em 0.2em;
 }
 
@@ -349,8 +354,7 @@ a:visited {
 }
 
 #sidebar {
-  border-right: 1px solid #363636;
-  /* border-right: 1px solid #31424a; */
+  border-right: 2px solid #31424a;
   top: 4.5rem;
   position: sticky;
   width: 250px;
@@ -383,6 +387,7 @@ a:visited {
 article {
   padding: 0 1.5em;
   max-width: 640px;
+  width: 100%;
 }
 
 
@@ -463,7 +468,7 @@ article {
   position: fixed;
   top: 0;
   left: 0;
-  border-bottom: 1px solid #363636;
+  border-bottom: 1px solid #1d272b;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -498,6 +503,5 @@ article {
   }
   article {
     padding: 0;
-    width: 100%;
   }
 }
