--- a/docs/assets/one.css
+++ b/docs/assets/one.css
@@ -300,7 +300,7 @@ a:visited {
   line-height: 1.2em;
   font-size: 1.2em;
   color: #dedede;
-  border-bottom: 1px solid #31424a;
+  border-bottom: 1px solid #1d272b;
   padding: 1em 0.2em;
 }
 
