rename class `.container-doc` to id `content-doc`

--- a/docs/assets/one.css
+++ b/docs/assets/one.css
@@ -322,7 +322,7 @@ a:visited {
   color: #ffffff;
 }
 
-.container-doc {
+#content-doc {
   margin: 3.5rem auto;
   display: flex;
   margin-left: auto;
