rename unused class `.container-doc` in `docs/assets/one.css`

--- a/docs/assets/one.css
+++ b/docs/assets/one.css
@@ -489,7 +489,7 @@ article {
   #sidebar {
     display: none;
   }
-  .container-doc {
+  #content-doc {
     justify-content: center;
   }
   #header-doc {
